Closed Bug 13392 Opened 25 years ago Closed 25 years ago

[gfx] nsDeviceContextWin::GetClientRect is broken

Categories

(Core :: XUL, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: davidm, Assigned: danm.moz)

References

Details

since it routines pixels rather than twips. The client rect has to be multiplies by mDevUnitsToAppUnits and rounded like in GetDeviceSurfaceDimensions.
Blocks: 3976
Assignee: trudelle → beard
This looks more like beard's area, reassigning
Assignee: beard → kmcclusk
Assignee: kmcclusk → danm
Reassigning to Dan, since he just recently added GetClientRect. The comment in the public interface file is in conflict with the returned rect when it describes the rect as containing values in app units.
Status: NEW → ASSIGNED
Target Milestone: M12
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.