windows device context now reports ClientRect in twips, like everyone else. fixes bug 13392. r:saari@netscape.com.